# bonobrownie

./: README.md  karate-config.js  pyproject.toml  test_api.feature
app/: main.py  pyproject.toml  teste.py
app/api/src/api/: deps.py
app/api/src/api/v1/: api.py
app/api/src/api/v1/endpoints/: clientes.py  produtos.py  vendas.py
app/api/src/db/: base.py  session.py
app/api/src/models/: cliente.py  produto.py  venda.py
app/api/src/repository/: base.py  venda.py
app/api/src/routes/: atualizar_estoque.py  clientes.py  cobranca.py  estoque_atual.py  historico.py  vender.py
app/api/src/schemas/: cliente.py  cobranca.py  msg.py  produto.py  venda.py
